<resources>
    <string name="label_remaining">Remaining</string>
    <string name="dummy_remaining">Rp. 0.0</string>
    <string name="label_total_budget">Total Budget</string>
    <string name="label_total_spend">Total Spend</string>
    <string name="toolbar_monthly_budget">Monthly Budget</string>
    <string name="toolbar_detail_spend">Detail Spend</string>
    <string name="btn_add_spend">Add Spend</string>
    <string name="label_project_title">Project Title</string>
    <string name="hint_project_title">Project Title</string>
    <string name="label_start_date">Start Date</string>
    <string name="hint_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="hint_end_date">End Date</string>
    <string name="btn_add_category">Add Category</string>
    <string name="btn_save">Save</string>
    <string name="toolbar_add_project">Add Project</string>
    <string name="label_select_category">Select Category</string>
    <string name="label_budget">Budget</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_budget">Budget</string>
    <string name="hint_spend">Spend</string>
    <string name="hint_category">Category</string>
    <string name="toolbar_select_category">Select Category</string>
    <string name="error_value_null_or_empty">Value must not null or empty</string>
    <string name="error_category_null_or_empty">Category must not null or empty</string>
    <string name="error_budget_value_null_or_empty">Budget value must not null or empty</string>
    <string name="error_projecttitle_null_or_empty">Project title must not null or empty</string>
    <string name="error_startdate_null_or_empty">Start date must not null or empty</string>
    <string name="error_enddate_null_or_empty">End date must not null or empty</string>
    <string name="error_startdate_not_selected">Please select start date first</string>
    <string name="error_startdate_after_enddate">Start date must not after the end date</string>
    <string name="message_success_create_project">Success create project</string>
    <string name="message_success_create_spend">Success add spend</string>
    <string name="hint_note">Note (optional)</string>
    <string name="label_note">Note</string>
    <string name="btn_edit_project">Edit Project</string>
    <string name="menu_edit_project">Edit Project</string>
    <string name="menu_delete_project">Delete Project</string>
    <string name="label_delete_project">Delete Project</string>
    <string name="message_delete_project">Are You sure want to delete this project?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="message_success_delete_project">Success delete project</string>
</resources>