<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RelativeDefault"
    android:background="@color/colorPrimary">

    <RelativeLayout
        style="@style/RelativeDefault">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarDefault"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:titleTextColor="@color/white"
            android:background="@color/colorPrimary"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_budget"
            style="@style/ConstraintWrapHeight"
            android:layout_below="@id/toolbar"
            android:padding="20dp">
            <TextView
                android:id="@+id/tv_label_total_budget"
                style="@style/TextRegularNormal"
                android:text="@string/label_total_budget"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:id="@+id/tv_total_budget"
                style="@style/TextBoldExtraBig"
                android:text="@string/dummy_remaining"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/tv_label_total_budget"
                app:layout_constraintLeft_toLeftOf="@id/tv_label_total_budget"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_spend"
                style="@style/CardWrapHeight"
                android:layout_width="0dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_total_budget"
                app:layout_constraintLeft_toLeftOf="@id/tv_label_total_budget"
                app:layout_constraintRight_toLeftOf="@id/card_remaining">
                <LinearLayout
                    style="@style/LinearVerticalWrap"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="14dp">
                    <ImageView
                        style="@style/ImageViewWrapAll"
                        android:src="@drawable/ic_spend"/>
                    <TextView
                        style="@style/TextRegularSmall"
                        android:text="@string/label_total_spend"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/red"/>
                    <TextView
                        android:id="@+id/tv_total_spend"
                        style="@style/TextBoldBig"
                        tools:text="@string/dummy_remaining"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/red"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_remaining"
                style="@style/CardWrapHeight"
                android:layout_width="0dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="@id/card_spend"
                app:layout_constraintLeft_toRightOf="@id/card_spend"
                app:layout_constraintRight_toRightOf="parent">
                <LinearLayout
                    style="@style/LinearVerticalWrap"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="14dp">
                    <ImageView
                        style="@style/ImageViewWrapAll"
                        android:src="@drawable/ic_remaining"/>
                    <TextView
                        style="@style/TextRegularSmall"
                        android:text="@string/label_remaining"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimary"/>
                    <TextView
                        android:id="@+id/tv_total_remaining"
                        style="@style/TextBoldBig"
                        tools:text="@string/dummy_remaining"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimary"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <com.anangkur.materialloadingbutton.MaterialLoadingButton
                android:id="@+id/btn_add_spend"
                style="@style/ButtonMedium"
                android:layout_width="0dp"
                app:mlb_textButton="@string/btn_add_spend"
                app:mlb_defaultColor="@color/colorPrimary"
                app:mlb_textColor="@color/white"
                app:mlb_strokeColor="@color/white"
                app:mlb_strokeWidth="1dp"
                app:mlb_cornerRadius="100dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/card_spend"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_sheet_budget"
        style="@style/RelativeDefault"
        android:padding="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="-20dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="false"
        app:behavior_peekHeight="320dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_budget"
            style="@style/RecyclerDefault"
            android:paddingBottom="20dp"
            android:clipToPadding="false"
            tools:listitem="@layout/item_spend_category"
            tools:itemCount="20"/>

    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>